@@ -108,6 +108,9 @@ Server.prototype.connect = function(parent, callback) {
   });
     
   server.connection.on("error", function(err) {
+    // Log error message
+    server.logger.error("connectionError", err);
+    // Move information on to parent loggers
     if(parent.listeners("error") != null && parent.listeners("error").length > 0) parent.emit("error", err);
     parent.state = "notConnected"
     server.connected = false;
