@@ -1,4 +1,5 @@
 * Reworked bson.js parser to get rid off Array.shift() due to it allocating new memory for each call. Speedup varies between 5-15% depending on doc
+* Reworked socket handling code to emit errors on unparsable messages
 
 0.9.6-19 2011-09-29
 * Fixing compatibility issues between C++ bson parser and js parser
